fix width and spacing for elements that update regularly

--- a/css/inner/dashboard.less
+++ b/css/inner/dashboard.less
@@ -12,7 +12,11 @@
     transition-timing-function: ease-in-out;
   }
 }
-
+.live {
+  &.time {
+    white-space: nowrap;
+  }
+}
 #dashboard {
   .clearfix();
   padding: 0 1vw;
